fix: Increased webkit scrollbar sized

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-  @apply w-1.5 h-1.5 bg-slate-700;
+  @apply w-2.5 h-2.5 bg-slate-700;
 }
 
 ::-webkit-scrollbar-thumb {
